add smtp details
